--- a/app/src/main/res/layout/booking_details_bottom_sheet.xml
+++ b/app/src/main/res/layout/booking_details_bottom_sheet.xml
@@ -372,10 +372,20 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/btnShowTalentDetails"
+        android:id="@+id/btnCloseBookingDetailsDialog"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30sp"
+        android:background="#fc6177"
+        android:text="Close"
+        android:textColor="#fff"
+        tools:ignore="HardcodedText" />
+
+    <Button
+        android:id="@+id/btnShowTalentDetails"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10sp"
         android:background="#f4a261"
         android:text="Show Talent Details"
         android:textColor="#fff"
