--- a/app/src/main/res/layout/bookings_list.xml
+++ b/app/src/main/res/layout/bookings_list.xml
@@ -50,7 +50,7 @@
 
             <customfonts.MyTextView
                 android:id="@+id/lblBookingGeneratedId"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_toEndOf="@id/imgTalentDisplayPhoto"
                 android:layout_below="@id/lblTalentFullName"
