--- a/app/src/main/res/layout/activity_set_booking_details.xml
+++ b/app/src/main/res/layout/activity_set_booking_details.xml
@@ -157,7 +157,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_below="@id/txtBookingVenueOrLocation"
-                android:hint="Enter Talent Fee Offer.."
+                android:hint="Enter talent fee offer.."
                 android:inputType="number"
                 android:textSize="16sp"
                 android:padding="10dp"
