--- a/app/src/main/res/layout/booking_and_client_details_bottom_sheet.xml
+++ b/app/src/main/res/layout/booking_and_client_details_bottom_sheet.xml
@@ -356,6 +356,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/lblApprovedDeclinedDateCaption"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5sp"
