--- a/app/src/main/res/layout/booking_and_talent_details_bottom_sheet.xml
+++ b/app/src/main/res/layout/booking_and_talent_details_bottom_sheet.xml
@@ -351,6 +351,7 @@
         android:layout_gravity="center_vertical">
 
         <TextView
+            android:id="@+id/lblApprovedDeclinedDateCaption"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5sp"
