--- a/app/src/main/res/layout/fragment_pay_via_bank_transfer_or_deposit_dialog.xml
+++ b/app/src/main/res/layout/fragment_pay_via_bank_transfer_or_deposit_dialog.xml
@@ -5,8 +5,7 @@
     android:layout_height="wrap_content"
     android:paddingBottom="20dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragments.PayViaDebitCreditCardDialog"
-    android:background="@color/gainsboro">
+    tools:context=".fragments.PayViaDebitCreditCardDialog">
 
     <RelativeLayout
         android:id="@+id/relativeLayoutTalentDetails"
@@ -18,27 +17,31 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@color/colorPrimary"
-            android:text="Pay Using Debit/Credit Card"
+            android:text="Pay Using Bank Transfer/Deposit"
             android:textAlignment="center"
             android:gravity="center_vertical"
             android:textStyle="bold"
             android:textColor="@color/white"
             tools:ignore="HardcodedText,RtlCompat" />
 
-        <com.stripe.android.view.CardMultilineWidget
-            android:id="@+id/cardMultilineWidget"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/lblBankTransferOrDepositDetails"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/lblDialogCaption"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
-            app:shouldShowPostalCode="false" />
+            android:textAlignment="textStart"
+            android:layout_below="@id/lblDialogCaption"
+            android:gravity="start"
+            android:layout_margin="8sp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:textSize="15sp"
+            tools:ignore="RtlCompat" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btnContinuePayment"
+            android:id="@+id/btnCloseBankTransferDialog"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/cardMultilineWidget"
+            android:layout_below="@+id/lblBankTransferOrDepositDetails"
             android:layout_marginTop="10dp"
             android:background="@color/colorPrimary"
             android:layout_marginStart="15dp"
@@ -46,22 +49,7 @@
             android:drawablePadding="10dp"
             android:textColor="@color/white"
             android:textStyle="bold"
-            android:text="Continue"
-            tools:ignore="HardcodedText" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btnClosePayment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/btnContinuePayment"
-            android:layout_marginTop="10dp"
-            android:background="@color/red"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
-            android:drawablePadding="10dp"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            android:text="Close"
+            android:text="Ok, Got It!"
             tools:ignore="HardcodedText" />
 
     </RelativeLayout>
